--- a/res/rapport.ltx
+++ b/res/rapport.ltx
@@ -905,10 +905,12 @@ appelée \textit{limited walking}~\cite{ConnectionScanAlgorithmLong:2017}.
 Avec ceci et le cas 1, nous tenons compte de tous les chemins, excepté celui qui
 relie directemment $pDep$ à $pArr$.\\
 
-% Distinguons les critères de domination faisant usage des données associées aux
-% trips, e.g. le nombre de transferts, le nombre de connexions effectuées en bus
-% appartenant à des trips différents, de ceux faisant usage de données uniquement
-% liés aux mouvements individuels, e.g. le nombre de connexions en bus.
+Le cas 2 peut servir pour ajouter des critères liés aux trips tels que le
+nombre de transferts. Toutefois, notre implémentation ne supporte pas ce type
+de critères, celle-ci supporte seulement les critères liés aux mouvements
+individuels (e.g. nombre de connexions en bus). Nous laissons donc le code pour
+le cas 2 commenté, pour ne pas impacter les performances.\\
+
 
 
 % - Expliquer à quoi sert et comment est implémentée une profile function
