subsection structure de données

--- a/res/rapport.ltx
+++ b/res/rapport.ltx
@@ -327,7 +327,7 @@ arrêts correspondant au nom de départ et au nom d’arrivée, supposés proche
 uns des autres, et calcule le plus court trajet parmi ceux qui partent d’un des
 arrêts de départ possibles et arrivent à un des arrêts d’arrivée possibles.
 
-\subsection{Description de la structure de données utilisée}
+\subsection{Structure de données}
 Notre programme utilise principalement des \texttt{hashmaps}, des \texttt{listes} et une \texttt{pile} comme structures de données.
 
 \begin{itemize}
@@ -909,7 +909,9 @@ de critères, celle-ci supporte seulement les critères liés aux mouvements
 individuels (e.g. nombre de connexions en bus). Nous laissons donc le code pour
 le cas 2 commenté, pour ne pas impacter les performances.\\
 
+%-------------------------------------------------------------------
 
+\subsection{Structure de données}
 
 % - Expliquer à quoi sert et comment est implémentée une profile function
 % - Expliquer "dominer" "optimisation pareto"
