--- a/res/rapport.ltx
+++ b/res/rapport.ltx
@@ -964,7 +964,7 @@ Les paires se trouvant dans le \texttt{ArrayList} contiennent :
 \end{enumerate}
 
 Celles-ci sont ordonnées par temps de départ décroissant afin de maximiser le
-nombre d'insertions en fin de listes (moins couteuses). Puisque nous scannons
+nombre d'insertions en fin de liste (moins couteuses). Puisque nous scannons
 les connexions par ordre de départ décroissant, nous allons généralement
 insérer dans la fonction de profile des groupes de trajets partiels débutant de
 plus en plus tôt. Nous ne pouvons pas garantir que cela est toujours de plus en
